@@ -1,9 +1,12 @@
+page {
+	includeCSS {
+		bzdstaffdirectory_pi1 = EXT:bzdstaffdirectory/media/bzd_staff_directory.css
+	}
+}
+
 plugin.tx_bzdstaffdirectory_pi1 {
 	# location of the template file
 	templateFile = EXT:bzdstaffdirectory/media/bzdstaff_template.htm
-
-	# location of the CSS file (leave empty to include no CSS file)
-	cssFile = EXT:bzdstaffdirectory/media/bzd_staff_directory.css
 
 	# comma-separated list of PIDs from where the records should be fetched
 	startingpoint =
